changed it a bit

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title>Cecily Sanders</title>
     </head>
     <body>
-        <p>hello world</p>
+        <h1>Cecily Sanders</h1>
+        <p>Hello world. I am a personal site created from github for Cecily! 
+            Shes super bored right now cause shes got nothing new to do.
+        </p>
+        <img src="" alt="">
     </body>
 </html>
