I added a lot and made it pretty ish

--- a/index.html
+++ b/index.html
@@ -2,13 +2,39 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Cecily Sanders</title>
+        <title>Cecily Sanders's Work</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet"> 
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     </head>
     <body>
-        <h1>Cecily Sanders</h1>
-        <p>Hello world. I am a personal site created from github for Cecily! 
-            Shes super bored right now cause shes got nothing new to do.
-        </p>
+        <nav class="navbar navbar-dark bg-dark">
+            <h2 class="navbar-brand">Projects</h2>
+            <a href="https://sanderscecily.github.io/BasicPortfolio/" target="_blank">That Portfolio Though</a> 
+            <a href="" target="_blank">Responsiveness Assignment</a>
+            <!-- <a href="" target="_blank">3</a>
+            <a href="" target="_blank">4</a>
+            <a href="" target="_blank">5</a>
+            <a href=" target="_blank"">6</a> -->
+            <nav class="navbar navbar-dark bg-dark">
+                <form class="form-inline">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+              </nav>
+        </nav>
+        <article class="jumbotron">
+        <h1>Cecily Sanders's Personal Github Site</h1>
+            <p>
+                Hello world! Welcome to Cecily Sanders's Personal Github Site. This site is made so that you
+                wonderful visitor can click and see Cecily's work quickly! Shes linked all her projects into
+                 the sidebar for your convience. Go ahead and check it out! She didn't give me a bunch of 
+                 talking lines for you so....have fun!
+            </p>
+        </article>
+        <i class="fas fa-ghost fa-10x" id="ghostyboy"></i>
         <img src="" alt="">
     </body>
 </html>
