--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav class="navbar navbar-dark bg-dark">
             <h2 class="navbar-brand">Projects</h2>
             <a href="https://sanderscecily.github.io/BasicPortfolio/" target="_blank">That Portfolio Though</a> 
-            <a href="" target="_blank">Responsiveness Assignment</a>
-            <!-- <a href="" target="_blank">3</a>
-            <a href="" target="_blank">4</a>
+            <a href="https://sanderscecily.github.io/ResponsivePortfolio/" target="_blank">Responsiveness Assignment</a>
+            <a href="https://sanderscecily.github.io/WordGuessGame/" target="_blank">Hangman</a>
+            <!--<a href="" target="_blank">4</a>
             <a href="" target="_blank">5</a>
             <a href=" target="_blank"">6</a> -->
             <nav class="navbar navbar-dark bg-dark">
