--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <a href="https://sanderscecily.github.io/BasicPortfolio/" target="_blank">That Portfolio Though</a> 
             <a href="https://sanderscecily.github.io/ResponsivePortfolio/" target="_blank">Responsiveness Assignment</a>
             <a href="https://sanderscecily.github.io/WordGuessGame/" target="_blank">Hangman</a>
-            <!--<a href="" target="_blank">4</a>
-            <a href="" target="_blank">5</a>
+            <a href="https://sanderscecily.github.io/unit4game/" target="_blank">Pearl Collection</a>
+            <!-- <a href="" target="_blank">5</a> 
             <a href=" target="_blank"">6</a> -->
             <nav class="navbar navbar-dark bg-dark">
                 <form class="form-inline">
