added a new link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             <a href="https://sanderscecily.github.io/unit4game/" target="_blank">Pearl Collection</a>
              <a href="https://sanderscecily.github.io/TriviaGame/.
              " target="_blank"> Trivia Game</a> 
-            <!-- <a href=" target="_blank"">6</a> -->
+            <a href="https://sanderscecily.github.io/GIPHYAPI/." target="_blank">Giphy API Test</a>
+            <!-- <a href="" target="_blank">6</a> -->
+            <!-- <a href="" target="_blank">6</a> -->
+            <!-- <a href="" target="_blank">6</a> -->
             <nav class="navbar navbar-dark bg-dark">
                 <form class="form-inline">
                   <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
