--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="https://sanderscecily.github.io/unit4game/" target="_blank">Pearl Collection</a>
              <a href="https://sanderscecily.github.io/TriviaGame/.
              " target="_blank"> Trivia Game</a> 
+             <a href="https://sanderscecily.github.io/Flipboard/." target="_blank">Train Flipboard</a>
             <!-- <a href=" target="_blank"">6</a> -->
             <nav class="navbar navbar-dark bg-dark">
                 <form class="form-inline">
