--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
              " target="_blank"> Trivia Game</a> 
             <a href="https://sanderscecily.github.io/GIPHYAPI/." target="_blank">Giphy API Test</a>
             <a href="https://sanderscecily.github.io/Flipboard/" target="_blank">Train Flipboard</a>
-            <!-- <a href="" target="_blank">6</a> -->
+            <a href="https://github.com/monetthigpen/projectOne" target="_blank"> Project One </a>
             <!-- <a href="" target="_blank">6</a> -->
             <!-- <a href="" target="_blank">6</a> -->
             <nav class="navbar navbar-dark bg-dark">
