--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <title>Cecily Sanders's Work</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet"> 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <nav class="navbar navbar-dark bg-dark">
@@ -30,16 +30,6 @@
                 </form>
               </nav>
         </nav>
-        <article class="jumbotron">
-        <h1>Cecily Sanders's Personal Github Site</h1>
-            <p>
-                Hello world! Welcome to Cecily Sanders's Personal Github Site. This site is made so that you
-                wonderful visitor can click and see Cecily's work quickly! Shes linked all her projects into
-                 the sidebar for your convience. Go ahead and check it out! She didn't give me a bunch of 
-                 talking lines for you so....have fun!
-            </p>
-        </article>
-        <i class="fas fa-ghost fa-10x" id="ghostyboy"></i>
-        <img src="" alt="">
+        <div class="hexagon"><span></span></div>
     </body>
 </html>
