--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Cecily Sanders's Work</title>
+        <title>Portfolio</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet"> 
@@ -23,13 +23,13 @@
             <a href="https://github.com/monetthigpen/projectOne" target="_blank"> Project One </a>
             <!-- <a href="" target="_blank">6</a> -->
             <!-- <a href="" target="_blank">6</a> -->
-            <nav class="navbar navbar-dark bg-dark">
-                <form class="form-inline">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-              </nav>
         </nav>
-        <div class="hexagon"><span></span></div>
+        <div class="projects">
+            <div class="hexagon">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>   
+        </div>
     </body>
 </html>
