mid work update

--- a/index.html
+++ b/index.html
@@ -2,34 +2,104 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Portfolio</title>
+        <title>Cecily Sanders</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet"> 
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <nav class="navbar navbar-dark bg-dark">
-            <h2 class="navbar-brand">Projects</h2>
-            <a href="https://sanderscecily.github.io/BasicPortfolio/" target="_blank">That Portfolio Though</a> 
-            <a href="https://sanderscecily.github.io/ResponsivePortfolio/" target="_blank">Responsiveness Assignment</a>
-            <a href="https://sanderscecily.github.io/WordGuessGame/" target="_blank">Hangman</a>
-            <a href="https://sanderscecily.github.io/unit4game/" target="_blank">Pearl Collection</a>
-             <a href="https://sanderscecily.github.io/TriviaGame/.
-             " target="_blank"> Trivia Game</a> 
-            <a href="https://sanderscecily.github.io/GIPHYAPI/." target="_blank">Giphy API Test</a>
-            <a href="https://sanderscecily.github.io/Flipboard/" target="_blank">Train Flipboard</a>
-            <a href="https://github.com/monetthigpen/projectOne" target="_blank"> Project One </a>
-            <!-- <a href="" target="_blank">6</a> -->
-            <!-- <a href="" target="_blank">6</a> -->
-        </nav>
-        <div class="projects">
-            <div class="hexagon">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>   
+       <div class="dot"><img src="cat-3336579__340.jpg" alt="cat image" id="me"></div>
+        <div id="main"> 
+            <div id="about">
+                <hr><h1>About Me</h1><hr>
+                <p>
+                        Hello! If you've come to read about me, then lucky for you, you're in the right place. 
+                        My name is Cecily Sanders and I am a student interested in development. I word it in this 
+                        ever specific manner because if I were to say web development I would be limiting myself as 
+                        I also take interest in software development and frankly if I have the opportunity to know 
+                        how something is made then I most definitely want to know. Currently I am attending the UPenn 
+                        Coding Bootcamp (shoutout to you guys, hey!) but, I have my Associates from  Community College of Philadelphia
+                         and plan on continuing my education further. I major undergrad in Computer Science 
+                        and my Associates was  Information Technology and Sciences. I am a bit notorious for 
+                        wanting to be a jack of all trades and trying to be as useful as possible by being knowledgable about 
+                        a wide variety of subjects. 
+                    </p>
+                    <p>
+                        Personally I love working with people and computers! I thrive in a team collaborative enviroment but 
+                        also appreciate the ability to be able to brainstorm and bring my own personality to my work. Some of 
+                        those reasons are why I now work as a casino dealer but, also drive me away from the floor of the casino 
+                        to the home of an office space with (hopefully) a set group of diverse individuals getting ready to 
+                        work hard on any particular challenges that might arise. 
+                    </p>
+            </div>
+            <div id="projects" class = "container-fluid">
+                <hr><h1>Projects</h1><hr>
+                <div class="row Title"></div>
+                    <div class="row main">
+                        <div class="col-sm-2"></div>
+                        <div class="left-blue-hex col-sm-2">
+                            <a href="https://github.com/monetthigpen/projectOne" target="_blank">
+                            <img src = "bluehex.png" alt="hexagon graphic in blue" class="left">
+                            </a>
+                        </div>
+                        <div class="col-sm-1"><br></div>
+                        <div class="center-black-hex col-sm-2">
+                            <a href="https://sanderscecily.github.io/WordGuessGame/" target="_blank">
+                            <img src = "blackhex.png" alt="hexagon graphic in black" class="center">
+                            </a>
+                        </div>
+                        <div class="col-sm-1"><br></div>
+                        <div class="right-brown-hex col-sm-2">
+                            <img src = "brownhex.png" alt="hexagon graphic" class="right">
+                        </div>
+                        <div class="col-sm-2"></div>
+                        <div class="col-sm-2"></div>
+                        <div class="left-blue-p col-sm-2">
+                            <p class="left">This is the first project I love projectOne</p>
+                        </div>
+                        <div class="col-sm-1"><br></div>
+                        <div class="center-black-p col-sm-2">
+                            <p class="center">This is my second project I like Hangman</p>
+                        </div>
+                        <div class="col-sm-1"><br></div>
+                        <div class="right col-sm-2">
+                            <p class="right"> I dont like any other project</p>
+                        </div>
+                        <div class="col-sm-2"></div>
+                    </div>
+                <div class="row dropdown"></div>
+                <div class="row">
+                    <div class="accordion">
+                        <div class="card">
+                            <div class="card-header">
+                                <h6>Links to other Projects</h6>
+                            </div>
+                        <div id ="others close" class="collapse">
+                            <div class="card-body">
+                                <p>Select a Project to be taken to its Github page.</p>
+                                <!-- ADD A LINE BREAK EVERY 4 LINKS -->
+                                <a href="https://sanderscecily.github.io/BasicPortfolio/" target="_blank">That Portfolio Though</a> 
+                                <a href="https://sanderscecily.github.io/ResponsivePortfolio/" target="_blank">Responsiveness Assignment</a>
+                                <a href="https://sanderscecily.github.io/unit4game/" target="_blank">Pearl Collection</a>
+                                <a href="https://sanderscecily.github.io/TriviaGame/" target="_blank"> Trivia Game</a> <br>
+                                <a href="https://sanderscecily.github.io/GIPHYAPI/" target="_blank">Giphy API Test</a>
+                                <a href="https://sanderscecily.github.io/Flipboard/" target="_blank">Train Flipboard</a>
+                            </div>
+                        </div>
+                        </div>
+                     </div>
+                    </div>
+            <div id="contact">
+                <hr><h1>Contact</h1><hr>
+                <p>E-mail</p>
+                <p>LinkedIn</p>
+                <p>GitHub</p>
+                <p>Resume</p>
+            </div>
         </div>
     </body>
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.slim.js"
+  integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="
+  crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </html>
