--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                             <div class="card-header">
                                 <h6>Links to other Projects</h6>
                             </div>
-                        <div id ="others close" class="collapse">
+                        <div id ="others" class="collapse">
                             <div class="card-body">
-                                <p>Select a Project to be taken to its Github page.</p>
+                                <p>Select a Project to be taken to it.</p>
                                 <!-- ADD A LINE BREAK EVERY 4 LINKS -->
                                 <a href="https://sanderscecily.github.io/BasicPortfolio/" target="_blank">That Portfolio Though</a> 
                                 <a href="https://sanderscecily.github.io/ResponsivePortfolio/" target="_blank">Responsiveness Assignment</a>
@@ -90,10 +90,10 @@
                     </div>
             <div id="contact">
                 <hr><h1>Contact</h1><hr>
-                <p>E-mail</p>
-                <p>LinkedIn</p>
-                <p>GitHub</p>
-                <p>Resume</p>
+                <a><p>E-mail</p></a>
+                <a><p>LinkedIn</p></a>
+                <a><p>GitHub</p></a>
+                <a><p>Resume</p></a>
             </div>
         </div>
     </body>
