--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="row main">
                         <div class="col-sm-2"></div>
                         <div class="left-blue-hex col-sm-2">
-                            <a href="https://github.com/monetthigpen/projectOne" target="_blank">
+                            <a href="https://monetthigpen.github.io/projectOne/index.html" target="_blank">
                             <img src = "bluehex.png" alt="hexagon graphic in blue" class="left">
                             </a>
                         </div>
@@ -54,15 +54,15 @@
                         <div class="col-sm-2"></div>
                         <div class="col-sm-2"></div>
                         <div class="left-blue-p col-sm-2">
-                            <p class="left">This is the first project I love projectOne</p>
+                            <p class="left">This is my first project using an API. It uses the Septa and Youtube APIS to help provide entertainment. Click to check it out.</p>
                         </div>
                         <div class="col-sm-1"><br></div>
                         <div class="center-black-p col-sm-2">
-                            <p class="center">This is my second project I like Hangman</p>
+                            <p class="center">This Project is my version of a hangman game. Click the image to be taken to the game.</p>
                         </div>
                         <div class="col-sm-1"><br></div>
                         <div class="right col-sm-2">
-                            <p class="right"> I dont like any other project</p>
+                            <p class="right"> To be added...</p>
                         </div>
                         <div class="col-sm-2"></div>
                     </div>
@@ -83,17 +83,17 @@
                                 <a href="https://sanderscecily.github.io/TriviaGame/" target="_blank"> Trivia Game</a> <br>
                                 <a href="https://sanderscecily.github.io/GIPHYAPI/" target="_blank">Giphy API Test</a>
                                 <a href="https://sanderscecily.github.io/Flipboard/" target="_blank">Train Flipboard</a>
-                            </div>
+                           </div>
                         </div>
                         </div>
                      </div>
                     </div>
             <div id="contact">
                 <hr><h1>Contact</h1><hr>
-                <a><p>E-mail</p></a>
-                <a><p>LinkedIn</p></a>
-                <a><p>GitHub</p></a>
-                <a><p>Resume</p></a>
+                <a href="mailto: Sanders.Cecily@gmail.com"><p>E-mail</p></a>
+                <a href="https://www.linkedin.com/in/cecily-sanders-688b0a170/" target="_blank"><p>LinkedIn</p></a>
+                <a href="https://github.com/SandersCecily" target="_blank"><p>GitHub</p></a>
+                <a href="https://docs.google.com/document/d/1xJeThw-x9GEufA95t8mV2hzWMpryPG1yUrni25E7oMg/edit?usp=sharing" target="_blank"><p>Resume</p></a>
             </div>
         </div>
     </body>
