Update added new cli app

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                                 <a href="https://sanderscecily.github.io/TriviaGame/" target="_blank"> Trivia Game</a> <br>
                                 <a href="https://sanderscecily.github.io/GIPHYAPI/" target="_blank">Giphy API Test</a>
                                 <a href="https://sanderscecily.github.io/Flipboard/" target="_blank">Train Flipboard</a>
+                                <a href="https://github.com/SandersCecily/liri-node-app" target="_blank">LIRI CLI APP</a>
                            </div>
                         </div>
                         </div>
