--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                                 <a href="https://sanderscecily.github.io/GIPHYAPI/" target="_blank">Giphy API Test</a>
                                 <a href="https://sanderscecily.github.io/Flipboard/" target="_blank">Train Flipboard</a>
                                 <a href="https://github.com/SandersCecily/liri-node-app" target="_blank">LIRI CLI APP</a>
+                                <a href="https://github.com/SandersCecily/bamazon" target="_blank">Bamazon CLI APP</a> <br>
                            </div>
                         </div>
                         </div>
