--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                                 <a href="https://github.com/SandersCecily/liri-node-app" target="_blank">LIRI CLI APP</a>
                                 <a href="https://github.com/SandersCecily/bamazon" target="_blank">Bamazon CLI APP</a> <br>
                                 <a href="https://blooming-shore-75254.herokuapp.com/" target="_blank">Friend Finder</a>
+                                <a href="https://pastrypicnicker.herokuapp.com/" target="_blank">Friend Finder</a>
                            </div>
                         </div>
                         </div>
