Added project two, fixed link title

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                                 <a href="https://github.com/SandersCecily/liri-node-app" target="_blank">LIRI CLI APP</a>
                                 <a href="https://github.com/SandersCecily/bamazon" target="_blank">Bamazon CLI APP</a> <br>
                                 <a href="https://blooming-shore-75254.herokuapp.com/" target="_blank">Friend Finder</a>
-                                <a href="https://pastrypicnicker.herokuapp.com/" target="_blank">Friend Finder</a>
+                                <a href="https://pastrypicnicker.herokuapp.com/" target="_blank">Pastry Party</a>
+                                <a href="https://pocketparty.herokuapp.com/" target="_blank">Project 2</a>
                            </div>
                         </div>
                         </div>
