New css, and file structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-       <div class="dot"><img src="cat-3336579__340.jpg" alt="cat image" id="me"></div>
+       <div class="dot"></div>
         <div id="main"> 
             <div id="about">
                 <hr><h1>About Me</h1><hr>
@@ -38,18 +38,18 @@
                         <div class="col-sm-2"></div>
                         <div class="left-blue-hex col-sm-2">
                             <a href="https://monetthigpen.github.io/projectOne/index.html" target="_blank">
-                            <img src = "bluehex.png" alt="hexagon graphic in blue" class="left">
+                            <img src = "images/bluehex.png" alt="hexagon graphic in blue" class="left">
                             </a>
                         </div>
                         <div class="col-sm-1"><br></div>
                         <div class="center-black-hex col-sm-2">
                             <a href="https://sanderscecily.github.io/WordGuessGame/" target="_blank">
-                            <img src = "blackhex.png" alt="hexagon graphic in black" class="center">
+                            <img src = "images/blackhex.png" alt="hexagon graphic in black" class="center">
                             </a>
                         </div>
                         <div class="col-sm-1"><br></div>
                         <div class="right-brown-hex col-sm-2">
-                            <img src = "brownhex.png" alt="hexagon graphic" class="right">
+                            <img src = "images/brownhex.png" alt="hexagon graphic" class="right">
                         </div>
                         <div class="col-sm-2"></div>
                         <div class="col-sm-2"></div>
@@ -68,7 +68,7 @@
                     </div>
                 <div class="row dropdown"></div>
                 <div class="row">
-                    <div class="accordion">
+                    <div id="linktoproj"class="accordion">
                         <div class="card">
                             <div class="card-header">
                                 <h6>Links to other Projects</h6>
@@ -95,10 +95,10 @@
                     </div>
             <div id="contact">
                 <hr><h1>Contact</h1><hr>
-                <a href="mailto: Sanders.Cecily@gmail.com"><p>E-mail</p></a>
-                <a href="https://www.linkedin.com/in/cecily-sanders-688b0a170/" target="_blank"><p>LinkedIn</p></a>
-                <a href="https://github.com/SandersCecily" target="_blank"><p>GitHub</p></a>
-                <a href="https://docs.google.com/document/d/1xJeThw-x9GEufA95t8mV2hzWMpryPG1yUrni25E7oMg/edit?usp=sharing" target="_blank"><p>Resume</p></a>
+                <div class="condiv"><a href="mailto: Sanders.Cecily@gmail.com"><p>E-mail</p></a></div>
+                <div class="condiv"><a href="https://www.linkedin.com/in/cecily-sanders-688b0a170/" target="_blank"><p>LinkedIn</p></a></div>
+                <div class="condiv"><a href="https://github.com/SandersCecily" target="_blank"><p>GitHub</p></a></div>
+                <div class="condiv"><a href="https://docs.google.com/document/d/1xJeThw-x9GEufA95t8mV2hzWMpryPG1yUrni25E7oMg/edit?usp=sharing" target="_blank"><p>Resume</p></a></div>
             </div>
         </div>
     </body>
