README Update, added font awesome, changed some styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Cecily Sanders</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
@@ -95,10 +96,25 @@
                     </div>
             <div id="contact">
                 <hr><h1>Contact</h1><hr>
-                <div class="condiv"><a href="mailto: Sanders.Cecily@gmail.com"><p>E-mail</p></a></div>
-                <div class="condiv"><a href="https://www.linkedin.com/in/cecily-sanders-688b0a170/" target="_blank"><p>LinkedIn</p></a></div>
-                <div class="condiv"><a href="https://github.com/SandersCecily" target="_blank"><p>GitHub</p></a></div>
-                <div class="condiv"><a href="https://docs.google.com/document/d/1xJeThw-x9GEufA95t8mV2hzWMpryPG1yUrni25E7oMg/edit?usp=sharing" target="_blank"><p>Resume</p></a></div>
+                <div class="condiv"> 
+                    <i class="fa fa-paper-plane-o fa-3x"></i>
+                    <h5>Email</h5> 
+                    <a href="mailto: Sanders.Cecily@gmail.com"><p>Sanders.Cecily@gmail.com</p></a>
+                </div>
+                <div class="condiv">
+                    <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
+                    <h5>LinkedIn</h5>
+                    <a href="https://www.linkedin.com/in/cecily-sanders-688b0a170/" target="_blank"><p>Link In</p></a></div>
+                <div class="condiv">
+                    <i class="fa fa-github-alt fa-3x" aria-hidden="true"></i>
+                    <h5>GitHub</h5>
+                    <a href="https://github.com/SandersCecily" target="_blank"><p>Check Out</p></a>
+                </div>
+                <div class="condiv">
+                    <i class="fa fa-file-word-o fa-3x" aria-hidden="true"></i>
+                    <h5>Resume</h5>
+                    <a href="https://docs.google.com/document/d/1xJeThw-x9GEufA95t8mV2hzWMpryPG1yUrni25E7oMg/edit?usp=sharing" target="_blank"><p>Read Me</p></a>
+                </div>
             </div>
         </div>
     </body>
