added a new link for resume and redid the about me section

--- a/index.html
+++ b/index.html
@@ -13,59 +13,33 @@
             <div id="about">
                 <hr><h1>About Me</h1><hr>
                 <p>
-                        Hello! If you've come to read about me, then lucky for you, you're in the right place. 
-                        My name is Cecily Sanders and I am a student interested in development. I word it in this 
-                        ever specific manner because if I were to say web development I would be limiting myself as 
-                        I also take interest in software development and frankly if I have the opportunity to know 
-                        how something is made then I most definitely want to know. Currently I am attending the UPenn 
-                        Coding Bootcamp (shoutout to you guys, hey!) but, I have my Associates from  Community College of Philadelphia
-                         and plan on continuing my education further. I major undergrad in Computer Science 
-                        and my Associates was  Information Technology and Sciences. I am a bit notorious for 
-                        wanting to be a jack of all trades and trying to be as useful as possible by being knowledgable about 
-                        a wide variety of subjects. 
-                    </p>
-                    <p>
-                        Personally I love working with people and computers! I thrive in a team collaborative enviroment but 
-                        also appreciate the ability to be able to brainstorm and bring my own personality to my work. Some of 
-                        those reasons are why I now work as a casino dealer but, also drive me away from the floor of the casino 
-                        to the home of an office space with (hopefully) a set group of diverse individuals getting ready to 
-                        work hard on any particular challenges that might arise. 
+                        Hello world! My name is Cecily Sanders, feel free to give me a nickname as many have. I know my name isn't very common but, I would say neither am I. I’ve gotten my certification as a full stack developer but, I tend to advertise myself as a front end developer because I thoroughly enjoy working with javascript and making something function. I’m very comfortable working in databases and get excited to learn about new technologies. I am versed in working with Node.js and creating server routes. To find out more about my skill levels in depth feel free to check out some works below or to contact me personally and ask.
+                        <br><br>
+                        Currently I am based out of Philadelphia, PA and this is where I’ve come to know myself as a developer as well as the technologies I’ve used. I have an associate's degree in Computer Information Systems and I plan to continue my education to get a bachelor's degree in Computer Science. 
+                        <br><br>
+                        I love working with new people to try and understand the ways they go about a problem. Oftentimes I find myself working in team environments and confident in the work I can give to them. I love being able to contribute to a team and bring in a spark of personality to those around me. 
                     </p>
             </div>
             <div id="projects" class = "container-fluid">
                 <hr><h1>Projects</h1><hr>
                 <div class="row Title"></div>
                     <div class="row main">
-                        <div class="col-sm-2"></div>
-                        <div class="left-blue-hex col-sm-2">
+                        <div class="left-blue-hex col">
                             <a href="https://monetthigpen.github.io/projectOne/index.html" target="_blank">
                             <img src = "images/bluehex.png" alt="hexagon graphic in blue" class="left">
                             </a>
+                            <p class="left">This is my first project using an API. It uses the Septa and Youtube APIS to help provide entertainment. Click to check it out.</p>
                         </div>
-                        <div class="col-sm-1"><br></div>
-                        <div class="center-black-hex col-sm-2">
+                        <div class="center-black-hex col">
                             <a href="https://sanderscecily.github.io/WordGuessGame/" target="_blank">
                             <img src = "images/blackhex.png" alt="hexagon graphic in black" class="center">
                             </a>
-                        </div>
-                        <div class="col-sm-1"><br></div>
-                        <div class="right-brown-hex col-sm-2">
-                            <img src = "images/brownhex.png" alt="hexagon graphic" class="right">
-                        </div>
-                        <div class="col-sm-2"></div>
-                        <div class="col-sm-2"></div>
-                        <div class="left-blue-p col-sm-2">
-                            <p class="left">This is my first project using an API. It uses the Septa and Youtube APIS to help provide entertainment. Click to check it out.</p>
-                        </div>
-                        <div class="col-sm-1"><br></div>
-                        <div class="center-black-p col-sm-2">
                             <p class="center">This Project is my version of a hangman game. Click the image to be taken to the game.</p>
                         </div>
-                        <div class="col-sm-1"><br></div>
-                        <div class="right col-sm-2">
+                        <div class="right-brown-hex col">
+                            <img src = "images/brownhex.png" alt="hexagon graphic" class="right">
                             <p class="right"> To be added...</p>
                         </div>
-                        <div class="col-sm-2"></div>
                     </div>
                 <div class="row dropdown"></div>
                 <div class="row">
@@ -113,7 +87,7 @@
                 <div class="condiv">
                     <i class="fa fa-file-word-o fa-3x" aria-hidden="true"></i>
                     <h5>Resume</h5>
-                    <a href="https://docs.google.com/document/d/1xJeThw-x9GEufA95t8mV2hzWMpryPG1yUrni25E7oMg/edit?usp=sharing" target="_blank"><p>Read Me</p></a>
+                    <a href="https://docs.google.com/document/d/1xJeThw-x9GEufA95t8mV2hzWMpryPG1yUrni25E7oMg/export?format=pdf" target="_blank"><p>Read Me</p></a>
                 </div>
             </div>
         </div>
