--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <a href="https://blooming-shore-75254.herokuapp.com/" target="_blank">Friend Finder</a>
                                 <a href="https://pastrypicnicker.herokuapp.com/" target="_blank">Pastry Party</a>
                                 <a href="https://pocketparty.herokuapp.com/" target="_blank">Project 2</a>
-                                <a href="https://dashboard.heroku.com/apps/fathomless-basin-95109" target="_blank">News Skimmer</a><br>
+                                <a href="https://fathomless-basin-95109.herokuapp.com/" target="_blank">News Skimmer</a><br>
                            </div>
                         </div>
                         </div>
