added google book search project

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                                 <a href="https://pastrypicnicker.herokuapp.com/" target="_blank">Pastry Party</a>
                                 <a href="https://pocketparty.herokuapp.com/" target="_blank">Project 2</a>
                                 <a href="https://fathomless-basin-95109.herokuapp.com/" target="_blank">News Skimmer</a><br>
+                                <a href="https://pocketparty.herokuapp.com/" target="_blank">Google Books Search</a>
                            </div>
                         </div>
                         </div>
