adjusted the code to the file structure added some readme

--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
         <header class="row">
             <h3 class="four columns">Cecily Sanders<span class="blink">_</span></h3>
             <nav class="eight columns">
-                <a href="./index.html"><button>Home</button></a>
+                <a href="./"><button>Home</button></a>
                 <a href="#"><button>About</button></a>
-                <a href="./projects.html"><button>Projects</button></a>
+                <a href="./projects"><button>Projects</button></a>
             </nav>
         </header>
         <hr />
