--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <h3 class="four columns">Cecily Sanders<span class="blink">_</span></h3>
             <nav class="eight columns">
                 <a href="#"><button>Home</button></a>
-                <a href="./about.html"><button>About</button></a>
-                <a href="./projects.html"><button>Projects</button></a>
+                <a href="./about"><button>About</button></a>
+                <a href="./projects"><button>Projects</button></a>
             </nav>
         </header>
         <hr />
